--- a/style/style.css
+++ b/style/style.css
@@ -56,6 +56,13 @@
 	border-radius: 5%;
 }
 
+.aumentar-3 {
+	width: 70%;
+	position: relative;
+	left: 170px;
+	top: 180px;
+}
+
 .tirar {
 	color: white;
 	text-decoration: none;
